<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/color_status_color">
        <Button
        android:id="@+id/id_keyword_back"
        android:layout_width="@dimen/dimen_settings_title_height"
        android:layout_height="@dimen/dimen_settings_title_height"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_settings_title_button_margin"
        android:padding="@dimen/dimen_settings_title_button_padding"
        android:layout_alignParentLeft="true"
        android:background="@drawable/md_back"/>  
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/string_settings_preference_keywordsettings"
        android:textSize="@dimen/dimen_settings_title_size"
        android:textColor="@color/color_titletext_color"
        android:clickable="true"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="?android:attr/selectableItemBackground"  
        android:orientation="horizontal">
    	<TextView
    	android:layout_width="wrap_content"
    	android:layout_height="match_parent"
        android:text="@string/string_settings_preference_keywordinfest"
        android:textSize="16sp"
        android:textColor="@color/color_small_black"
        android:gravity="center_vertical"
        android:paddingLeft="36dp"
        android:clickable="true"/>
    	<com.kyleduo.switchbutton.SwitchButton
        android:id="@+id/id_settings_keyword"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        style="@style/MaterialDesignStyle" />
    </RelativeLayout>
    <TextView 
    	android:layout_width="match_parent"
    	android:layout_height="1dp"
    	android:background="#ebebeb" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:id="@+id/id_keyword_open"
        android:visibility="gone">
        <ListView
            android:id="@+id/id_keyword_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:cacheColorHint="#00000000"
            android:divider="@color/color_keyword_list_divider"
            android:dividerHeight="@dimen/dimen_keyword_list_divider_height"
            android:drawSelectorOnTop="false"
            android:visibility="gone">
        </ListView>
        <TextView
            android:id="@+id/id_keyword_have_nokeyword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/str_no_keyword"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/id_keyword_have_closekeyword"
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.0"
        android:text="@string/str_no_open_keyword"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="visible"/>

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="vertical"
    android:background="@color/color_white_notrans">
    <TextView 
    	android:layout_width="match_parent"
    	android:layout_height="1dp"
    	android:background="#ebebeb" />

    <Button
        android:id="@+id/id_add_keyword_button"
        android:layout_width="match_parent"
    	android:layout_height="55dp"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	android:layout_marginTop="0dp"
    	android:layout_marginBottom="0dp"
    	android:backgroundTint="@color/color_titlebar_color"
    	android:colorControlHighlight="@color/color_tabbar_color"
        android:backgroundTintMode="src_over"
    	android:text="@string/string_settings_preference_keywordadd"
    	android:textColor="@color/color_tabtext_color"
    	android:textSize="20sp"/>
        
</LinearLayout>
</LinearLayout>
