<?xml version="1.0" encoding="UTF-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/id_desktop_contacts_detail_popupwidow_layout"
   	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:background="@color/color_white"
    android:orientation="vertical">
	<RelativeLayout
	    android:id="@+id/id_blacklist_popupwidow_title"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/dimen_popupwindow_height"
	    android:background="@color/color_white">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:singleLine="true"
	        android:textColor="@color/color_small_black"
	        android:textSize="@dimen/dimen_popupwindow_title_size"
	        android:text="@string/string_popupwindow_title"/>
	</RelativeLayout>
	<RelativeLayout
	    android:id="@+id/id_blacklist_popupwindow_call"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/dimen_popupwindow_height"
		android:background="?android:attr/selectableItemBackground">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="@dimen/dimen_popupwindow_divider_height"
			android:layout_marginLeft="@dimen/dimen_popupwindow_divider_margin"
			android:layout_marginRight="@dimen/dimen_popupwindow_divider_margin"
			android:background="@color/color_settings_list_divider"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="@dimen/dimen_popupwindow_title_margin"
			android:singleLine="true"
			android:textColor="@color/color_small_black"
			android:textSize="@dimen/dimen_popupwindow_subtitle_size"
	        android:text="@string/string_add_by_calllog_title"/>
	</RelativeLayout>
	<RelativeLayout
	    android:id="@+id/id_blacklist_popupwindow_sms"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/dimen_popupwindow_height"
		android:background="?android:attr/selectableItemBackground">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="@dimen/dimen_popupwindow_divider_height"
			android:layout_marginLeft="@dimen/dimen_popupwindow_divider_margin"
			android:layout_marginRight="@dimen/dimen_popupwindow_divider_margin"
			android:background="@color/color_settings_list_divider"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="@dimen/dimen_popupwindow_title_margin"
			android:singleLine="true"
			android:textColor="@color/color_small_black"
			android:textSize="@dimen/dimen_popupwindow_subtitle_size"
	        android:text="@string/string_add_by_sms_title"/>
	</RelativeLayout>
	<RelativeLayout
	    android:id="@+id/id_blacklist_popupwindow_contacts"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/dimen_popupwindow_height"
		android:background="?android:attr/selectableItemBackground">
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/dimen_popupwindow_divider_height"
	        android:layout_marginLeft="@dimen/dimen_popupwindow_divider_margin"
	        android:layout_marginRight="@dimen/dimen_popupwindow_divider_margin"
	        android:background="@color/color_settings_list_divider"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="@dimen/dimen_popupwindow_title_margin"
	        android:singleLine="true"
	        android:textColor="@color/color_small_black"
	        android:textSize="@dimen/dimen_popupwindow_subtitle_size"
	        android:text="@string/string_add_by_contacts_title"/>
	</RelativeLayout>
	<RelativeLayout
	    android:id="@+id/id_blacklist_popupwindow_hand"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/dimen_popupwindow_height"
		android:background="?android:attr/selectableItemBackground">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="@dimen/dimen_popupwindow_divider_height"
			android:layout_marginLeft="@dimen/dimen_popupwindow_divider_margin"
			android:layout_marginRight="@dimen/dimen_popupwindow_divider_margin"
			android:background="@color/color_settings_list_divider"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="@dimen/dimen_popupwindow_title_margin"
			android:singleLine="true"
			android:textColor="@color/color_small_black"
			android:textSize="@dimen/dimen_popupwindow_subtitle_size"
	        android:text="@string/string_popupwindow_title_hand"/>
	</RelativeLayout>
	<RelativeLayout

	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/dimen_popupwindow_height"
	    android:background="@color/color_white">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="@dimen/dimen_popupwindow_divider_height"
			android:layout_marginLeft="@dimen/dimen_popupwindow_divider_margin"
			android:layout_marginRight="@dimen/dimen_popupwindow_divider_margin"
			android:background="@color/color_settings_list_divider"/>
	    <Button
			android:id="@+id/id_blacklist_popupwidow_cancel"
        android:layout_width="match_parent"
    	android:layout_height="@dimen/dimen_popupwindow_cancel_height"
    	android:layout_marginLeft="@dimen/dimen_popupwindow_cancel_margin"
    	android:layout_marginRight="@dimen/dimen_popupwindow_cancel_margin"
    	android:backgroundTint="#eee"
    	android:colorControlHighlight="@color/color_tabbar_color"
        android:backgroundTintMode="src_over"
    	android:text="@string/string_popupwindow_title_cancel"
    	android:textColor="@color/color_small_black"
       	android:textSize="@dimen/dimen_popupwindow_cancel_size"/>
	</RelativeLayout>
	
</LinearLayout>		