<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_settings_title_height"
            android:layout_gravity="center"
            android:background="@color/color_status_color"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/id_byhand_back"
                android:layout_width="@dimen/dimen_settings_title_button_size"
                android:layout_height="@dimen/dimen_settings_title_button_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_settings_title_button_margin"
                android:background="@drawable/md_back"
                android:padding="@dimen/dimen_settings_title_button_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:text="@string/string_add_by_hand_title"
                android:textColor="@color/color_titletext_color"
                android:textSize="@dimen/dimen_add_title_size" />
        </RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_add_byhand_edittext_margin"
            android:inputType="phone"
            android:hint="@string/string_add_by_hand_edit_number"
            android:maxEms="10"
            android:minEms="4"
            android:id="@+id/editTextNumber" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_add_byhand_edittext_margin"
            android:inputType="textMultiLine"
            android:hint="@string/string_add_by_hand_edit_name"
            android:ems="10"
            android:id="@+id/editTextName" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_add_listview_bottom"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/color_white_notrans">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_add_listview_bottom_divider"
            android:background="@color/color_settings_list_divider" />

        <Button
            android:id="@+id/add_by_hand_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_add_listview_bottom_button"
            android:layout_marginLeft="@dimen/dimen_add_listview_bottom_margin"
            android:layout_marginRight="@dimen/dimen_add_listview_bottom_margin"
            android:backgroundTint="@color/color_titlebar_color"
            android:colorControlHighlight="@color/color_tabbar_color"
            android:backgroundTintMode="src_over"
            android:text="@string/string_add_by_some_sure"
            android:textColor="@color/color_tabtext_color"
            android:textSize="@dimen/dimen_add_title_size"/>

    </LinearLayout>
</RelativeLayout>
    </ScrollView>