<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/id_infest_main_init"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:visibility="visible"
		android:orientation="vertical">
		<!-- 标题栏 -->
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/dimen_titlebar_size"
			android:background="@color/color_titlebar_color">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_centerInParent="true"
				android:text="@string/AppTitle"
				android:textColor="@color/color_titletext_color"
				android:textSize="@dimen/dimen_titletext_size"
				android:typeface="monospace"
				android:gravity="center"/>
		</RelativeLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:background="@color/color_tab_divider_color"/>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:background="@drawable/loadingpage_bg"
				android:indeterminateDrawable="@drawable/animdraw"
				android:indeterminateDuration="1500" />
		</RelativeLayout>
	</LinearLayout>
    <LinearLayout
		android:id="@+id/id_infest_main_content"
    	android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:visibility="gone"
    	android:background="@color/color_white"
    	android:orientation="vertical">
   <!-- 标题栏 -->
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="@dimen/dimen_titlebar_size"
    	android:background="@color/color_titlebar_color">
        <TextView
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:text="@string/AppTitle"
    	android:textColor="@color/color_titletext_color"
    	android:textSize="@dimen/dimen_titletext_size"
		android:typeface="monospace"
    	android:gravity="center"/>
    </LinearLayout>
	<TextView
		android:layout_width="match_parent"
		android:layout_height="1px"
		android:background="@color/color_tab_divider_color"/>
    <!-- 选项卡 -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_tabbar_size"
    android:background="@color/color_tabbar_color"
    android:orientation="horizontal">
        <TextView
        android:id="@+id/tab_sms"
    	android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:text="@string/AppTabSms"
    	android:textColor="@color/color_tabtext_color"
    	android:textSize="@dimen/dimen_tabtext_size"
    	android:gravity="bottom|center_horizontal"/>
        <TextView
        android:id="@+id/tab_call"
    	android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:text="@string/AppTabCall"
    	android:textColor="@color/color_tabtext_color_grey"
    	android:textSize="@dimen/dimen_tabtext_size"
    	android:gravity="bottom|center_horizontal"/>
        <TextView
        android:id="@+id/tab_black"
    	android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:text="@string/AppTabBlackList"
    	android:textColor="@color/color_tabtext_color_grey"
    	android:textSize="@dimen/dimen_tabtext_size"
    	android:gravity="bottom|center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="@dimen/dimen_tabselect_height"
    	android:gravity="center"
    	android:orientation="vertical"
    	android:background="@color/color_tabbar_color">
        <ImageView
        android:id="@+id/tab_selected"
        android:layout_width="@dimen/dimen_tabselect_width"
    	android:layout_height="@dimen/dimen_tabselect_height"
    	android:gravity="left"
    	android:layout_gravity="left"
    	android:background="@drawable/tab_background"/>
    </LinearLayout>
    <android.support.v4.view.ViewPager
	    	android:id="@+id/id_desktop_view_pager"
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent"
	        android:layout_gravity="center"
	        android:background="@color/color_transparent"
	        android:flipInterval="30"
	        android:persistentDrawingCache="animation" />
</LinearLayout>

</LinearLayout>
