<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView          
		android:id="@+id/id_call_list_view"     
	   	android:layout_width="fill_parent"
		android:layout_height="0.0dp"
		android:layout_weight="1.0"
		android:layout_marginLeft="@dimen/dimen_listview_margin"
		android:layout_marginRight="@dimen/dimen_listview_margin"
    	android:visibility="gone"
		android:cacheColorHint="#00000000"
		android:divider="@color/color_sms_list_divider"
		android:dividerHeight="@dimen/dimen_call_list_divider_height"
		android:drawSelectorOnTop="false"/>

	<RelativeLayout
		android:id="@+id/id_call_no_call"
		android:layout_width="match_parent"
		android:layout_height="0.0dp"
		android:layout_weight="1.0"
		android:visibility="visible">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_alignParentTop="true"
			android:layout_marginTop="@dimen/dimen_layout_prompt_margintop"
			android:orientation="vertical">
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:contentDescription="call"
				android:padding="@dimen/dimen_layout_prompt_padding"
				android:background="@drawable/call"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_layout_prompt_text_margintop"
				android:layout_gravity="center_horizontal"
				android:text="@string/str_no_call"
				android:textSize="@dimen/dimen_layout_prompt_text_size"/>
		</LinearLayout>
	</RelativeLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimen_layout_bottom_height"
		android:background="@color/color_bottom_color"
		android:orientation="vertical">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:background="@color/color_gray"/>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/dimen_layout_bottom_margintop"
			android:orientation="vertical">
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<ImageView
					android:layout_width="@dimen/dimen_layout_bottom_image_size"
					android:layout_height="@dimen/dimen_layout_bottom_image_size"
					android:layout_marginLeft="@dimen/dimen_layout_bottom_image_margin"
					android:layout_marginTop="@dimen/dimen_layout_bottom_image_margin"
					android:background="@drawable/settings"
					android:contentDescription="@string/AppTabSms" />
				<ImageView
					android:id="@+id/id_call_settings"
					android:layout_width="@dimen/dimen_layout_bottom_imagebig_size"
					android:layout_height="@dimen/dimen_layout_bottom_imagebig_size"
					android:background="@drawable/md_settings"
					android:contentDescription="@string/AppTabSms" />
			</RelativeLayout>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_layout_bottom_margintop"
				android:layout_gravity="center_horizontal"
				android:text="@string/str_bottom_settings"
				android:textSize="@dimen/dimen_layout_bottom_settings_size"
				android:textColor="@color/color_small_black"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
