<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:background="@color/color_status_color"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_callback_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/md_back"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:text="@string/string_settings_preference_callbacksettings"
            android:textColor="@color/color_titletext_color"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="36dp"
                    android:text="@string/string_settings_preference_subtitle_mang"
                    android:textColor="@color/color_small_black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="8dp"
                android:background="#ecebeb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="36dp"
                    android:text="@string/string_settings_preference_subtitle_poweroff"
                    android:textColor="@color/color_small_black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="8dp"
                android:background="#ecebeb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="36dp"
                    android:text="@string/string_settings_preference_subtitle_ting"
                    android:textColor="@color/color_small_black"
                    android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="8dp"
                android:background="#ecebeb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="36dp"
                    android:text="@string/string_settings_preference_subtitle_null"
                    android:textColor="@color/color_small_black"
                    android:textSize="16sp" />

            </RelativeLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/id_settings_callback"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/id_settings_callback1"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginRight="32dp"
                android:checked="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginRight="8dp"
                android:background="#ecebeb" />

            <RadioButton
                android:id="@+id/id_settings_callback2"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginRight="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginRight="8dp"
                android:background="#ecebeb" />

            <RadioButton
                android:id="@+id/id_settings_callback3"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginRight="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginRight="8dp"
                android:background="#ecebeb" />

            <RadioButton
                android:id="@+id/id_settings_callback4"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginRight="32dp"
                android:checked="false" />
        </RadioGroup>

</LinearLayout>

</LinearLayout>